# memoryos

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  SUBMISSION.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: baseline.py  confidence.py  config.py  db.py  decision.py  embeddings.py  engine.py  events.py  evidence_auditor.py  extraction.py  fallback_chain.py  main.py  models.py  qwen_client.py  retrieval.py  schemas.py  store.py  verification.py
backend/app/api/: routes.py
backend/app/memory/: core.py  decay.py  episodic.py  pattern.py  semantic.py
backend/config/: confidence_policy.yaml
backend/evals/: dataset.py  demo.py  harness.py  ingest_ics.py  ingest_markdown.py  run_eval.py  seed_sweep.py
backend/evals/longmemeval/: __init__.py  adapter.py  judge.py  run.py
backend/tests/: conftest.py  test_api.py  test_auditor.py  test_confidence.py  test_decay.py  test_engine_fold.py  test_ingest_ics.py  test_ingest_markdown.py  test_judge_rules.py  test_patterns.py  test_retrieval.py  test_semantic_merge.py
deploy/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  nginx.conf
docs/: blog-post.md  comparison.md  demo-script.md  deploy-alibaba.md  deployment-notes.md  eval-methodology.md  internals.md  longmemeval-results.md  recording-checklist.md  security.md
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ErrorBoundary.tsx  shell.tsx  ui.tsx
frontend/lib/: api.ts  useStream.ts
scripts/: download_datasets.sh  reproduce_all.sh
(+4 files in other folders)
